--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="grid">
         <nav class="nav"> 
             <header>
-                <ul>
+                <ul class="list-container">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Genres</a></li>
                     <li><a href="#">Albums</a></li>
@@ -20,35 +19,42 @@
                 </ul>
             </header>
         </nav>
+
+
         <main>
             <div class="title-container">
-                <h1>Music Albums by Genre</h1>
+                <h1>Albums by Genre</h1>
             </div>
             <div class="genre-container-classical">
-                <h2 class="genre-title">Classical</h2>
-                <div id="albumsclassical"></div>
+                <h2 class="genre-title">-Classical-</h2>
             </div>
+            <div id="albumsclassical"></div>
+
             <div class="genre-container-jazz">
-                <h2 class="genre-title">Jazz</h2>
-                <div id="albumsjazz"></div>
-            </div>    
+                <h2 class="genre-title">-Jazz-</h2>
+            </div>  
+            <div id="albumsjazz"></div>
+
             <div class="genre-container-electronic">
-                <h2 class="genre-title">Electronic</h2>
-                <div id="albumselectronic"></div>
-            </div>    
-            <div class="genre-container-postrock">
-                <h2 class="genre-title">Post-Rock</h2>
-                <div id="albumspostrock"></div>
+                <h2 class="genre-title">-Electronic-</h2>
             </div>
-            <footer>
-                <ul>
+            <div id="albumselectronic"></div>
+
+            <div class="genre-container-postrock">
+                <h2 class="genre-title">-Post-Rock-</h2>
+            </div>
+            <div id="albumspostrock"></div>
+            
+
+
+            <footer class="footer">
+                <ul class="list-container">
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="#">Datenschutzt</a></li>
                 </ul>
             </footer>
         </main>
-    </div>
     
 </body>
 </html>
